fix template select. Wrap dnd in function

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -78,7 +78,7 @@ section article {
     display: none;
   }
 
-  button.add-btn {
+  button.add-btn, #print-btn {
     display: none;
   }
 }
@@ -96,18 +96,19 @@ section article {
   box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
 }
 
-article:hover {
-  border-left: 3px solid #ec571c;
-}
-
-input[type="checkbox"]:checked + article {
-  opacity: .5;
-}
-
 input[type="checkbox"]:checked::after {
   color: #fff;
   font-weight: bold;
   content: "X";
+}
+
+article:hover {
+  border-left: 3px solid #ec571c;
+}
+
+// hide section on select
+input[type="checkbox"]:checked + article {
+  opacity: .5;
 }
 
 /* Experimental */
